--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,15 @@
 	path = ohmyzsh
 	url = https://github.com/ohmyzsh/ohmyzsh/
 	ignore = dirty
+[submodule "ohmyzsh-plugins/zsh-history-substring-search"]
+	path = ohmyzsh-plugins/zsh-history-substring-search
+	url = https://github.com/zsh-users/zsh-history-substring-search
+[submodule "ohmyzsh-plugins/zsh-z"]
+	path = ohmyzsh-plugins/zsh-z
+	url = https://github.com/agkozak/zsh-z
+[submodule "ohmyzsh-plugins/zsh-autosuggestions"]
+	path = ohmyzsh-plugins/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions
+[submodule "ohmyzsh-plugins/zsh-syntax-highlighting"]
+	path = ohmyzsh-plugins/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting
