--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 [submodule "ohmyzsh-plugins/zsh-syntax-highlighting"]
 	path = ohmyzsh-plugins/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting
+[submodule "pure"]
+	path = pure
+	url = https://github.com/sindresorhus/pure
